--- a/src/index.html
+++ b/src/index.html
@@ -14,32 +14,42 @@
 
   <body>
     <header>
+      <div class="container">
+        <div class="logo">
+          <a href="#">
+            <img width="100%" src="./image/logo.png" alt="Логотип" />
+          </a>
+        </div>
+      </div>
       <div class="top-header">
         <div class="container">
           <div class="phones">
-			<div><a href="#">+7 (843) 2 - 400 - 371</a></div>
-			<div><a href="#">+7 (966) 2 - 400 - 371</a></div>
+            <div><a href="#">+7 (843) 2 - 400 - 371</a></div>
+            <div><a href="#">+7 (966) 2 - 400 - 371</a></div>
           </div>
         </div>
-	  </div>
-	  <div class="menu-header">
-		  <div class="container">
-			  <div class="menu">
-				  <ul class="animated fadeInDown">
-					  <li><a href="#">Главная</a></li>
-					  <li><a href="#">О нас</a></li>
-					  <li><a href="#">Специалисты</a></li>
-					  <li><a href="#">Отзывы</a></li>
-					  <li><a href="#">Прайс</a></li>
-					  <li><a href="#">Контакты</a></li>
-					  <li><a href="#">Акции</a></li>
-				  </ul>
-			  </div>
-		  </div>
-	  </div>
-	  <div class="image-header">
-		  
-	  </div>
+      </div>
+      <div class="menu-header">
+        <div class="container">
+          <div class="menu">
+            <ul class="animated fadeInDown">
+              <li><a href="#">Главная</a></li>
+              <li><a href="#">О нас</a></li>
+              <li><a href="#">Специалисты</a></li>
+              <li><a href="#">Отзывы</a></li>
+              <li><a href="#">Прайс</a></li>
+              <li><a href="#">Контакты</a></li>
+              <li><a href="#">Акции</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="image-header">
+        <!-- <div class="overlay"></div> -->
+        <div class="container">
+          <h1>Любимый салон <br />красоты в Казани <br />«HOLLYWOOD»</h1>
+        </div>
+      </div>
     </header>
   </body>
 </html>
