--- a/src/index.html
+++ b/src/index.html
@@ -13,43 +13,122 @@
   </head>
 
   <body>
-    <header>
-      <div class="container">
-        <div class="logo">
-          <a href="#">
-            <img width="100%" src="./image/logo.png" alt="Логотип" />
-          </a>
-        </div>
-      </div>
-      <div class="top-header">
+    <div class="preload">
+      <img src="./image/load.gif" alt="Загрузка страницы..." />
+    </div>
+    <div class="wrapper">
+      <header>
         <div class="container">
-          <div class="phones">
-            <div><a href="#">+7 (843) 2 - 400 - 371</a></div>
-            <div><a href="#">+7 (966) 2 - 400 - 371</a></div>
+          <div class="logo">
+            <a href="#"> <img src="./image/logo.png" alt="Логотип" /> </a>
+          </div>
+        </div>
+        <div class="top-header">
+          <div class="container">
+            <div class="phones">
+              <div><a href="#">+7 (843) 2 - 400 - 371</a></div>
+              <div><a href="#">+7 (966) 2 - 400 - 371</a></div>
+            </div>
+          </div>
+        </div>
+        <div class="menu-header">
+          <div class="container">
+            <div class="menu">
+              <ul class="animated fadeInDown">
+                <li><a href="#">Главная</a></li>
+                <li><a href="#services">Услуги</a></li>
+                <li><a href="#">О нас</a></li>
+                <li><a href="#">Специалисты</a></li>
+                <li><a href="#">Отзывы</a></li>
+                <li><a href="#">Прайс</a></li>
+                <li><a href="#">Контакты</a></li>
+                <li><a href="#">Акции</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="image-header">
+          <div class="container">
+            <h1>Любимый салон <br />красоты в Казани <br />«HOLLYWOOD»</h1>
+          </div>
+        </div>
+      </header>
+      <div class="services" id="services">
+        <div class="container">
+          <div class="service">
+            <a href="#">
+              <img src="./image/services/man-wooman.jpg" alt="">
+              <p>Женская/мужская стрижка</p>
+            </a>
+          </div>
+          <div class="service">
+            <a href="#">
+              <img src="./image/services/coloring.jpg" alt="">
+              <p>Окраска/мелирование волос</p>
+            </a>
+          </div>
+          <div class="service">
+            <a href="#">
+              <img src="./image/services/narashivanie.jpg" alt="">
+              <p>Наращивание волос/ресниц</p>
+            </a>
+          </div>
+          <div class="service">
+            <a href="#">
+              <img src="./image/services/correction.jpg" alt="">
+              <p>Коррекция бровей</p>
+            </a>
+          </div>
+          <div class="service">
+            <a href="#">
+              <img src="./image/services/cleaning.jpg" alt="">
+              <p>Чистка лица</p>
+            </a>
+          </div>
+          <div class="service">
+            <a href="#">
+              <img src="./image/services/wrapping.jpg" alt="">
+              <p>Обертывание</p>
+            </a>
+          </div>
+          <div class="service">
+            <a href="#">
+              <img src="" alt="">
+              <p></p>
+            </a>
+          </div>
+          <div class="service">
+            <a href="#">
+              <img src="" alt="">
+              <p></p>
+            </a>
+          </div>
+          <div class="service">
+            <a href="#">
+              <img src="" alt="">
+              <p></p>
+            </a>
+          </div>
+          <div class="service">
+            <a href="#">
+              <img src="" alt="">
+              <p></p>
+            </a>
+          </div>
+          <div class="service">
+            <a href="#">
+              <img src="" alt="">
+              <p></p>
+            </a>
+          </div>
+          <div class="service">
+            <a href="#">
+              <img src="" alt="">
+              <p></p>
+            </a>
           </div>
         </div>
       </div>
-      <div class="menu-header">
-        <div class="container">
-          <div class="menu">
-            <ul class="animated fadeInDown">
-              <li><a href="#">Главная</a></li>
-              <li><a href="#">О нас</a></li>
-              <li><a href="#">Специалисты</a></li>
-              <li><a href="#">Отзывы</a></li>
-              <li><a href="#">Прайс</a></li>
-              <li><a href="#">Контакты</a></li>
-              <li><a href="#">Акции</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="image-header">
-        <!-- <div class="overlay"></div> -->
-        <div class="container">
-          <h1>Любимый салон <br />красоты в Казани <br />«HOLLYWOOD»</h1>
-        </div>
-      </div>
-    </header>
+    </div>
   </body>
 </html>
