--- a/src/index.html
+++ b/src/index.html
@@ -54,77 +54,78 @@
         </div>
       </header>
       <div class="services" id="services">
+        <h2>Услуги</h2>
         <div class="container">
           <div class="service">
-            <a href="#">
-              <img src="./image/services/man-wooman.jpg" alt="">
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/hairstyle.jpg" alt="" />
               <p>Женская/мужская стрижка</p>
             </a>
           </div>
           <div class="service">
-            <a href="#">
-              <img src="./image/services/coloring.jpg" alt="">
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/highlights.jpg" alt="" />
               <p>Окраска/мелирование волос</p>
             </a>
           </div>
           <div class="service">
-            <a href="#">
-              <img src="./image/services/narashivanie.jpg" alt="">
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/hair_extensoions.jpg" alt="" />
               <p>Наращивание волос/ресниц</p>
             </a>
           </div>
           <div class="service">
-            <a href="#">
-              <img src="./image/services/correction.jpg" alt="">
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/eyebrow.jpg" alt="" />
               <p>Коррекция бровей</p>
             </a>
           </div>
           <div class="service">
-            <a href="#">
-              <img src="./image/services/cleaning.jpg" alt="">
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/washing-face.jpg" alt="" />
               <p>Чистка лица</p>
             </a>
           </div>
           <div class="service">
-            <a href="#">
-              <img src="./image/services/wrapping.jpg" alt="">
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/obertyvaniya-ot-cellyulita.jpg" alt="" />
               <p>Обертывание</p>
             </a>
           </div>
           <div class="service">
-            <a href="#">
-              <img src="" alt="">
-              <p></p>
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/makeup.jpg" alt="" />
+              <p>Макияж</p>
             </a>
           </div>
           <div class="service">
-            <a href="#">
-              <img src="" alt="">
-              <p></p>
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/tatoo.jpg" alt="" />
+              <p>Татуаж</p>
             </a>
           </div>
           <div class="service">
-            <a href="#">
-              <img src="" alt="">
-              <p></p>
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/manikyr.jpg" alt="" />
+              <p>Маникюр/Педикюр</p>
             </a>
           </div>
           <div class="service">
-            <a href="#">
-              <img src="" alt="">
-              <p></p>
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/narashivanie_hogtey.jpg" alt="" />
+              <p>Наращивание ногтей</p>
             </a>
           </div>
           <div class="service">
-            <a href="#">
-              <img src="" alt="">
-              <p></p>
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/depilyaciya.jpg" alt="" />
+              <p>Депиляция/Эпиляция</p>
             </a>
           </div>
           <div class="service">
-            <a href="#">
-              <img src="" alt="">
-              <p></p>
+            <a class="wow fadeInUp" href="#">
+              <img src="./image/services/solariy.jpg" alt="" />
+              <p>Солярий</p>
             </a>
           </div>
         </div>
