add personal and footer

--- a/src/index.html
+++ b/src/index.html
@@ -37,8 +37,8 @@
               <ul class="animated fadeInDown">
                 <li><a href="#">Главная</a></li>
                 <li><a href="#services">Услуги</a></li>
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Специалисты</a></li>
+                <li><a href="#about">О нас</a></li>
+                <li><a href="#personal">Специалисты</a></li>
                 <li><a href="#">Отзывы</a></li>
                 <li><a href="#">Прайс</a></li>
                 <li><a href="#">Контакты</a></li>
@@ -88,7 +88,10 @@
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/obertyvaniya-ot-cellyulita.jpg" alt="" />
+              <img
+                src="./image/services/obertyvaniya-ot-cellyulita.jpg"
+                alt=""
+              />
               <p>Обертывание</p>
             </a>
           </div>
@@ -130,6 +133,99 @@
           </div>
         </div>
       </div>
+      <div class="about-us" id="about">
+        <div class="container">
+          <div class="message">
+            <h3>О нас</h3>
+            <p>
+              Салон красоты “Голливуд” начал свою деятельность в 2014 году, но
+              специалисты, которые будут к Вашим услугам имеют опыт работы по
+              различным направлениям более 5 лет. Владелица салона красоты сама
+              является одним из лидеров в индустрии Красоты не только по
+              Татарстану и России, а так же за рубежом, имея опыт работы в
+              косметологии более 10 лет.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="personal" id="personal">
+        <div class="container">
+          <h3>Специалисты</h3>
+          <div class="owl-carousel owl-theme">
+            <div>
+              <img src="./image/personal/kosmetolog.png" alt="Косметолог" />
+              <h4>Хазиева Аида, косметолог</h4>
+              <p>
+                Опыт работы косметологом – эстетистом более 10 лет, посещает
+                всевозможные выставки по России и за рубежом. Работает на таких
+                известных марках как, Algologie (Франция) Morjana (Марокко),
+                Renew (Израиль), Beauty Stile (США).
+              </p>
+            </div>
+            <div>
+              <img
+                src="./image/personal/parikmaher-stilist1.png"
+                alt="Косметолог"
+              />
+              <h4>Альбина, парикмахер – стилист</h4>
+              <p>
+                Опыт работы в парикмахером 5 лет. Мастер универсал. Окончила
+                школу парикмахерского искусства, где обучалось 4 года. Посещает
+                семинары, работает на косметики: Matrix, Loreal (Америка).
+              </p>
+            </div>
+            <div>
+              <img src="./image/personal/nogt-servis1.png" alt="Косметолог" />
+              <h4>Лия, мастер по педикюру и маникюру</h4>
+              <p>
+                Работает в ногтевом сервисе более 5 лет. Свою работу знает
+                хорошо. Владеет всеми видами педикюра и маникюра.
+              </p>
+            </div>
+            <div>
+              <img src="./image/personal/administrator.png" alt="Косметолог" />
+              <h4>Аделя, администратор</h4>
+              <p>
+                Администратор зала и всего салона красоты Голливуд. Добрый,
+                порядочный человек. Опыт работы более 4 лет.
+              </p>
+            </div>
+            <div>
+              <img src="./image/personal/nogt-servis.png" alt="Косметолог" />
+              <h4>Диана, мастер ногтевого сервиса</h4>
+              <p>
+                Опыт работы специалиста ногтевого сервиса более 2 лет. Прошла
+                обучение по маникюру, педикюру и наращиванию ногтей.
+              </p>
+            </div>
+            <div>
+              <img
+                src="./image/personal/parikmaher-stilist.png"
+                alt="Косметолог"
+              />
+              <h4>Гоша, парикмахер – стилист</h4>
+              <p>
+                Опыт работы более 4 лет. Имеет большое количество сертификатов и
+                дипломов по парикмахерскому искусству. Женский мастер
+              </p>
+            </div>
+            <div>
+              <img src="./image/personal/vizaj.png" alt="Косметолог" />
+              <h4>Эля Волк, мастер визажист</h4>
+              <p>
+                Визажистом работает не так давно. Опыт работы более трех лет.
+                Работает только на профессиональной косметике. Сделала макияж
+                более 500 людям за все время.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <footer>
+      <div class="container">
+        <p>Copyright 2014-2017. skkaz.ru - Все права защищены.</p>
+      </div>
+    </footer>
   </body>
 </html>
