--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <body>
     <div class="mobile-menu"><div></div></div>
     <div class="preload">
-      <img src="./image/load.gif" alt="Загрузка страницы..." />
+      <img src="./images/load.gif" alt="Загрузка страницы..." />
     </div>
     <nav id="my-menu">
       <ul>
@@ -33,7 +33,7 @@
       <header>
         <div class="container">
           <div class="logo">
-            <a href="#"> <img src="./image/logo.png" alt="Логотип" /> </a>
+            <a href="#"> <img src="./images/logo.png" alt="Логотип" /> </a>
           </div>
         </div>
         <div class="top-header">
@@ -71,38 +71,65 @@
         <div class="container">
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/hairstyle.jpg" alt="" />
+              <img
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/hairstyle.jpg"
+                alt=""
+              />
               <p>Женская/мужская стрижка</p>
             </a>
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/highlights.jpg" alt="" />
+              <img
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/highlights.jpg"
+                alt=""
+              />
               <p>Окраска/мелирование волос</p>
             </a>
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/hair_extensoions.jpg" alt="" />
+              <img
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/hair_extensoions.jpg"
+                alt=""
+              />
               <p>Наращивание волос/ресниц</p>
             </a>
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/eyebrow.jpg" alt="" />
+              <img
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/eyebrow.jpg"
+                alt=""
+              />
               <p>Коррекция бровей</p>
             </a>
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/washing-face.jpg" alt="" />
+              <img
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/washing-face.jpg"
+                alt=""
+              />
               <p>Чистка лица</p>
             </a>
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
               <img
-                src="./image/services/obertyvaniya-ot-cellyulita.jpg"
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/obertyvaniya-ot-cellyulita.jpg"
                 alt=""
               />
               <p>Обертывание</p>
@@ -110,37 +137,67 @@
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/makeup.jpg" alt="" />
+              <img
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/makeup.jpg"
+                alt=""
+              />
               <p>Макияж</p>
             </a>
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/tatoo.jpg" alt="" />
+              <img
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/tatoo.jpg"
+                alt=""
+              />
               <p>Татуаж</p>
             </a>
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/manikyr.jpg" alt="" />
+              <img
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/manikyr.jpg"
+                alt=""
+              />
               <p>Маникюр/Педикюр</p>
             </a>
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/narashivanie_hogtey.jpg" alt="" />
+              <img
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/narashivanie_hogtey.jpg"
+                alt=""
+              />
               <p>Наращивание ногтей</p>
             </a>
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/depilyaciya.jpg" alt="" />
+              <img
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/depilyaciya.jpg"
+                alt=""
+              />
               <p>Депиляция/Эпиляция</p>
             </a>
           </div>
           <div class="service">
             <a class="wow fadeInUp" href="#">
-              <img src="./image/services/solariy.jpg" alt="" />
+              <img
+                src="./images/lazy.jpg"
+                class="lazyload"
+                data-src="./images/solariy.jpg"
+                alt=""
+              />
               <p>Солярий</p>
             </a>
           </div>
@@ -166,7 +223,12 @@
           <h3>Специалисты</h3>
           <div class="owl-carousel owl-theme">
             <div>
-              <img src="./image/personal/kosmetolog.png" alt="Косметолог" />
+              <img
+               class="lazyload"
+                src="./images/lazy.jpg"
+                data-src="./images/kosmetolog.jpg"
+                alt="Косметолог"
+              />
               <h4>Хазиева Аида, косметолог</h4>
               <p>
                 Опыт работы косметологом – эстетистом более 10 лет, посещает
@@ -177,7 +239,9 @@
             </div>
             <div>
               <img
-                src="./image/personal/parikmaher-stilist1.png"
+              class="lazyload"
+                src="./images/lazy.jpg"
+                data-src="./images/parikmaher-stilist1.jpg"
                 alt="Косметолог"
               />
               <h4>Альбина, парикмахер – стилист</h4>
@@ -188,7 +252,12 @@
               </p>
             </div>
             <div>
-              <img src="./image/personal/nogt-servis1.png" alt="Косметолог" />
+              <img
+              class="lazyload"
+                src="./images/lazy.jpg"
+                data-src="./images/nogt-servis1.jpg"
+                alt="Косметолог"
+              />
               <h4>Лия, мастер по педикюру и маникюру</h4>
               <p>
                 Работает в ногтевом сервисе более 5 лет. Свою работу знает
@@ -196,7 +265,12 @@
               </p>
             </div>
             <div>
-              <img src="./image/personal/administrator.png" alt="Косметолог" />
+              <img
+              class="lazyload"
+                src="./images/lazy.jpg"
+                data-src="./images/administrator.jpg"
+                alt="Косметолог"
+              />
               <h4>Аделя, администратор</h4>
               <p>
                 Администратор зала и всего салона красоты Голливуд. Добрый,
@@ -204,7 +278,12 @@
               </p>
             </div>
             <div>
-              <img src="./image/personal/nogt-servis.png" alt="Косметолог" />
+              <img
+              class="lazyload"
+                src="./images/lazy.jpg"
+                data-src="./images/nogt-servis.jpg"
+                alt="Косметолог"
+              />
               <h4>Диана, мастер ногтевого сервиса</h4>
               <p>
                 Опыт работы специалиста ногтевого сервиса более 2 лет. Прошла
@@ -213,7 +292,9 @@
             </div>
             <div>
               <img
-                src="./image/personal/parikmaher-stilist.png"
+              class="lazyload"
+                src="./images/lazy.jpg"
+                data-src="./images/parikmaher-stilist.jpg"
                 alt="Косметолог"
               />
               <h4>Гоша, парикмахер – стилист</h4>
@@ -223,7 +304,12 @@
               </p>
             </div>
             <div>
-              <img src="./image/personal/vizaj.png" alt="Косметолог" />
+              <img
+              class="lazyload"
+                src="./images/lazy.jpg"
+                data-src="./images/vizaj.jpg"
+                alt="Косметолог"
+              />
               <h4>Эля Волк, мастер визажист</h4>
               <p>
                 Визажистом работает не так давно. Опыт работы более трех лет.
